Add context for background layer string

BUG:439358